--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Amazon Style Gallery Template</title>
+      <title>Gallery</title>
       <meta name="robots" content="noindex, nofollow">
     </head>
 
